--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title> Responsive portfolio website Ansel </title>
+        <title> Responsive portfolio website </title>
     </head>
     <body>
         <!--=============== HEADER ===============-->
@@ -661,3 +661,5 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
+<!-- the eeeeeennndddd -->
